css/src/cleantalk-admin-settings-page.css
.apbct_settings-field_content,
.cleantalk_link-auto,
.cleantalk_link-manual,
.ct-warning-test-failed,
.ct_rate_block,
.ct_settings_banner,
i.animate-spin {
    display: inline-block
}

#apbctTopWarning {margin-bottom: 5px;}
#apbctTopWarning h3{margin: 10px 0 5px 0;}
#apbctTopWarning h4{margin: 10px;}
#apbctTopWarning h4 span{margin-top: 5px;}

/* Main title */
/*.apbct_settings-title{ display: inline-block; }*/
.apbct_settings-subtitle{
    position: relative;
    top: -15px;
    margin: 0;
}

/* Setting fields */
.apbct_settings-field_wrapper{ margin: 15px 0; }
.apbct_settings-field_wrapper--sub{ margin-left: 30px !important; }

.apbct_settings-field_title{  }
.apbct_settings__label{
    margin-right: 10px;
    font-size: 17px;
    vertical-align: text-bottom;
}

.apbct_settings-field_content{ display: inline-block; }
.apbct_settings-field_content--checkbox{  }
.apbct_settings-field_content--radio,
.apbct_settings-field_wrapper > .apbct_settings-field_description {
    width: 70%;
}
.apbct_settings-field_content--text{  }

.apbct_settings-field_title{}
.apbct_settings-field_title--checkbox{  }
.apbct_settings-field_title--radio{
    display: inline-block;
    margin: 0;
    width: 210px;
    padding-right: 10px;
    font-size: 14px;
    vertical-align: top;
}
.apbct_input_text{min-width: 255px; width: 400px;}

.apbct_settings-field--api_key{font-size: 14pt;}

.apbct_settings-long_description---show:hover{
    color: #aaaaaa;
    cursor: pointer;
}

.apbct_setting_textarea {
    min-width: 300px;
}

.cleantalk_link {
    text-decoration: none;
    font-size: 13px;
    line-height: 26px;
    margin: 0;
    padding: 0 10px 1px;
    cursor: pointer;
    border-width: 1px;
    border-style: solid;
    -webkit-appearance: none;
    white-space: nowrap;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}
.cleantalk_link-auto{
    background: #ccc;
    border-color: #999;
    -webkit-box-shadow: inset 0 1px 0 rgba(200,200,200,.5),0 1px 0 rgba(0,0,0,.15);
    box-shadow: inset 0 1px 0 rgba(200,200,200,.5),0 1px 0 rgba(0,0,0,.15);
    color: #000;
    display: inline-block;
    height: 28px;
    -webkit-border-radius: 2px;
    border-radius: 2px;
}
.cleantalk_link-auto:hover {color: #fff;}
.cleantalk_link-manual {
    background: #2ea2cc;
    border-color: #0074a2;
    -webkit-box-shadow: inset 0 1px 0 rgba(120, 200, 230, .5), 0 1px 0 rgba(0, 0, 0, .15);
    box-shadow: inset 0 1px 0 rgba(120, 200, 230, .5), 0 1px 0 rgba(0, 0, 0, .15);
    color: #fff;
    display: inline-block;
    -webkit-border-radius: 3px;
    border-radius: 3px;
    text-align: center;
}
.cleantalk_link-manual:hover {color:black;}
.cleantalk_link[disabled=disabled]{
    background: #5d9db5; color: #000;
}

.apbct_status_icon{
    vertical-align: text-bottom;
    margin: 0 5px 0 8px;
}

a.ct_support_link{
    color: #666;
    margin-right: 0.5em;
    font-size: 10pt;
    font-weight: normal;
}

.ct-warning-test-failed {
    display: inline-block;
    position: relative;
    padding: 5px;
    margin: 4px;
    border: 3px solid rgba(240,50,50,1);
    border-radius: 5px;
    background-color: rgba(255,200,200,1);
}

/* Settings banners  */
.ct_settings_banner{
    text-align: right;
    display:inline-block;
    width: 100%;
    margin: 1em 0;
    vertical-align: top;
}

#ct_translate_plugin {margin-left: 0;}
.ct_rate_block {
    display: inline-block;
    width: 370px;
    margin-right: 3em;
    padding: 0.8em 0.8em 15px 0.8em;
    text-align: center;
    border: 1px dashed #666;
}
#ct_translate_plugin .apbct_button_rate{margin-bottom: 10px;}

.apbct_long_desc{
    position: absolute;
    background: #5a5a5a;
    min-width: 80px; min-height: 80px;
    max-width: 500px;
    padding: 10px;
    color: white;
    z-index: 10;
}
i.animate-spin{
    -moz-animation: spin 2s infinite linear;
    -o-animation: spin 2s infinite linear;
    -webkit-animation: spin 2s infinite linear;
    animation: spin 2s infinite linear;
    display: inline-block;
    margin: 0 auto;
    font-size: 25px;
    line-height: 20px;
    color: rgba(120,200,230,1);
    margin: 25px;
}
@keyframes spin {
    to{transform: rotate(359deg);}
}
.apbct_long_desc__cancel{
    position: absolute;
    top: 5px; right: 5px;
    color: rgba(255,255,255,0.5);
}
.apbct_long_desc__cancel:hover{
    color: white;
}
.apbct_long_desc__angle{
    position: absolute;
    top: 5px; left: -17px;
    width: 10px; height: 10px;
    background: #5a5a5a;
    -webkit-transform: rotate(135deg);
    -ms-transform: rotate(135deg);
    transform: rotate(135deg);
    -webkit-transform-origin: 100% 100%;
    -ms-transform-origin: 100% 100%;
    transform-origin: 100% 100%;
}
.apbct_long_desc__title{
    color: rgba(120,200,230,1);
    margin: 0;
}

.--hide{ display: none; }
.apbct_preloader_button{ height: 15px; margin-left: 5px; vertical-align: text-top; display: none; }

/* Modal Window Stiles */
#cleantalk-modal-content {
    text-align: center;
}
#cleantalk-modal-content > * {
    display: block;
    width: 100%;
}

button.ct_support_link{
    border: none;
    background: transparent;
    color: #666;
    text-decoration: underline;
    cursor: pointer;
}
.apbct-btn-as-link {
    padding: 0;
    margin: 0;
    vertical-align: baseline;
    color: gray;
    border: 0 none;
    border-bottom: 1px solid;
    cursor: pointer;
}
#apbct-account-email[contenteditable="true"] {
    padding: 6px;
    background-color: #fff;
    border: 1px solid #ccc;
}
button[value="save_changes"]:disabled {
    color: #2271b1;
    border-color: #2271b1;
    background: #f6f7f7;
}
#apbct_settings__advanced_settings {
    position: relative;
}
#apbct_settings__advanced_settings_inner {
    width: 70%;
}
#apbct_hidden_section_nav {
    position: absolute;
    top: 0;
    right: 20px;
}
#apbct_settings__after_advanced_settings{
    margin-bottom: 20px;
}
#apbct_settings__button_section {
    position: fixed;
    background: #f0f0f1;
    width: 100%;
    padding-bottom: 20px;
}

